--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -23,5 +23,5 @@ jobs:
           pip install supabase
           pip install vaderSentiment
 
-      - name: Run Sentiment Analysis Script
+      - name: Run Scheduled Sentiment Analysis
         run: python .github/your_script.py  # Update this with the correct path to your script
