--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -24,4 +24,4 @@ jobs:
           pip install vaderSentiment
 
       - name: Run Scheduled Sentiment Analysis
-        run: python .github/your_script.py  # Update this with the correct path to your script
+        run: python sentiment-analysis/your_script.py  # Update this with the correct path to your script
